# renthouse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: bd29c4b2c3a4_.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
locales/uz/LC_MESSAGES/: messages.mo  messages.po
src/: bot.py  config.py  database.py  dispatcher.py  i18n.py  main.py  messages.py  settings.py
src/handlers/: language.py  start.py
src/keyboards/inline/: language.py
src/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/locales/uz/LC_MESSAGES/: messages.mo  messages.po
src/middlewares/: i18n.py
src/routes/: commands.py  language.py  user.py
