[project]
name = "ijarachi-bot"
version = "0.1.0"
authors = [
    {name = "Ulug'bek G'ozixonov",email = "ulugbekgozixonov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ruff = "^0.15.0"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
