[project]
name = "ijarachi-bot"
version = "0.1.0"
authors = [
  { name = "Ulug'bek G'ozixonov", email = "ulugbekgozixonov@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = ["aiogram (>=3.24.0,<4.0.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ruff = "^0.15.0"
mypy = "^1.19.1"
py-mon = "^2.2.0"
python-dotenv = "^1.2.1"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
strict = true
