[project]
name = "ijarachi-bot"
version = "0.1.0"
authors = [
  { name = "Ulug'bek G'ozixonov", email = "ulugbekgozixonov@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = ["aiogram[i18n] (>=3.2.1)", "babel (>=2.14)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ruff = "^0.15.0"
py-mon = "^2.2.0"
python-dotenv = "^1.2.1"
pyright = "^1.1.408"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
